fixed floating layer locator too wide issue

--- a/app-client/source/assets/styles/base-_framework/2-components/level-1/floating-layer-set.css
+++ b/app-client/source/assets/styles/base-_framework/2-components/level-1/floating-layer-set.css
@@ -10,8 +10,8 @@
 		overflow: visible!important;
 		margin-top: 15px;
 
-		width: 500px;
-		margin-left: -250px;
+		width: 360px;
+		margin-left: -180px;
 		text-align: center;
 
 		z-index: 10;
